add ios connection and add new mobile testcase